...
                                                <fontDescription key="fontDescription" name="Sacco-SemiBoldCondensed" family="Sacco" pointSize="50"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VgK-R7-LAx" userLabel="Stats Button">
                                                <rect key="frame" x="344.33333333333331" y="12.666666666666671" width="85.666666666666686" height="34.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="showStatsButton"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" image="chart.bar.fill" catalog="system"/>
                                                <connections>
                                                    <segue destination="xIK-JD-xUo" kind="presentation" identifier="showStats" id="QEH-vX-7Sf"/>
                                                </connections>
                                            </button>
...
                                                                <connections>
                                                                    <action selector="navButtonIsPressed:" destination="iMi-Aq-p3T" eventType="touchUpInside" id="EST-Oo-oR1"/>
                                                                </connections>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymP-rD-RPg">
                                                                <rect key="frame" x="143.33333333333331" y="0.0" width="143.33333333333331" height="96.333333333333329"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                <state key="normal" title="CLEAR"/>
                                                                <connections>
                                                                    <action selector="clearButtonIsPressed:" destination="iMi-Aq-p3T" eventType="touchUpInside" id="1dU-44-w9e"/>
                                                                </connections>
...
                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5nE-UN-U6o" userLabel="Bottom Stack View">
                                                        <rect key="frame" x="0.0" y="288.66666666666663" width="430" height="96"/>
                                                        <subviews>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxy-FH-K8O">
                                                                <rect key="frame" x="0.0" y="0.0" width="47.666666666666664" height="96"/>
                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                                                <state key="normal" title="Button"/>
                                                                <buttonConfiguration key="configuration" style="plain" image="checkmark.square.fill" catalog="system"/>
                                                                <connections>
                                                                    <action selector="checkIsPressed:" destination="iMi-Aq-p3T" eventType="touchUpInside" id="Ntz-Ii-2wz"/>
                                                                </connections>
                                                            </button>
...
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GvV-KQ-J0t">
                                                        <rect key="frame" x="324.33333333333331" y="0.0" width="25.666666666666686" height="24"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="dismissStatsButton"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                        <state key="normal">
                                                            <imageReference key="image" image="xmark.circle.fill" catalog="system" symbolScale="large"/>
                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                        </state>
...
                            <constraint firstItem="MYA-G0-EgT" firstAttribute="leading" secondItem="V2g-93-J0I" secondAttribute="leading" constant="40" id="OYh-fD-WzY"/>
                            <constraint firstItem="MYA-G0-EgT" firstAttribute="top" secondItem="V2g-93-J0I" secondAttribute="top" constant="50" id="cfJ-TB-1oo"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="chartContainerView" destination="62M-gc-uBS" id="hXz-QB-W7N"/>
                        <outlet property="chartView" destination="TfZ-w9-iqD" id="8aG-S3-7qb"/>
                        <outlet property="statsTableView" destination="8MA-yV-Tyq" id="y9o-Vj-Xvw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mJu-h4-5mH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2684" y="-367"/>
...
