...
    
    func startNewGame() {
        allLetters.resetCounters()
        correctCharacterArray = []
        delegate?.resetBoxes()
        
        if let testWord = ProcessInfo.processInfo.environment["TEST_WORD"] {
            randomWord = testWord
        } else {
            randomWord = AllWords.words.randomElement()!
        }
        
        labelArrayIndex = 0
...
