//
//  File.swift
//  GameLogicTests
//
//  Created by Andrea Bottino on 06/09/2024.
//

import Foundation

struct StatsNames {
    static let gamesPlayed = "Games played"
    static let gamesWon = "Wins"
    static let currentStreak = "Current streak"
    static let maxStreak = "Longest streak"
    static let winsIn1 = "Wins in 1"
    static let winsIn2 = "Wins in 2"
    static let winsIn3 = "Wins in 3"
    static let winsIn4 = "Wins in 4"
    static let winsIn5 = "Wins in 5"
    static let winsIn6 = "Wins in 6"
}
