...
        super.viewDidLoad()
        statsTableView.delegate = self
        statsTableView.dataSource = self
        statsTableView.register(UINib(nibName: "StatTableViewCell", bundle: nil), forCellReuseIdentifier: "statCell")
        setupChartView()
        playerStats?.loadStats()
        view.accessibilityIdentifier = "statsVC"
    }
    
    func setupChartView() {
        chartView.addSubview(AnyChartiOS.createChart(playerStats: playerStats ?? PlayerStats()))
        chartView.subviews[0].translatesAutoresizingMaskIntoConstraints = false
        chartView.subviews[0].centerXAnchor.constraint(equalTo: chartView.centerXAnchor).isActive = true
...
